# sesame-sdk

./: '  .gdb.swm  .gdb.swn  .gdb.swo  .gdb.swp  .gitignore  CMakeLists.txt  LICENSE  README.md  Session.vim  build_debug.bat  build_release.bat  sesame-sdk.sln  sesame-sdk.vcxproj  sesame-sdk.vcxproj.filters
include/: ses.h  utils.h
include/features/: esp.h  movement.h
include/game/: animations.h  tickbase.h
include/gui/: config.h  custom.h  menu.h
include/hooks/: createmove.h  hooks.h
include/resources/: resources.h
lib/csgo-sdk/: .sdk.h.swp  animstate.c  animstate.h  beams.h  client.h  crc32.h  cvar.h  engine.h  entity.h  entlist.h  events.c  events.h  globals.h  input.h  mat3x4.h  matsys.h  mdlcache.h  mdlinfo.h  mdlrender.h  memalloc.h  netvars.c  netvars.h  offsets.c  offsets.h  physics.h  player.c  player.h  pred.h  quat.h  renderview.h  sdk.c  sdk.h  surface.h  trace.h  usercmd.h  utlvec.h  vec3.h  weapon.c  weapon.h
lib/hashmap/: hashmap.h
lib/nuklear/: nuklear.h  nuklear_style.h
lib/sds/: sds.c  sds.h
lib/subhook/: subhook.c  subhook.h  subhook_private.h  subhook_windows.c  subhook_x86.c
lib/vector/: vector.c
src/: .ses.c.swp  main.c  ses.c  utils.c
src/features/: esp.c  movement.c
src/game/: animations.c  tickbase.c
src/gui/: config.c  menu.c
src/hooks/: accumulate_layers.c  animstate_reset.c  animstate_update.c  build_transformations.c  cl_fire_events.c  create_move.c  cs_blood_spray_callback.c  cvar_get_int.c  d3d9_end_scene.c  d3d9_reset.c  do_extra_bone_processing.c  do_procedural_foot_plant.c  draw_model.c  emit_sound.c  (+27 more)
(+7 files in other folders)
